# bug-ptr-not-in-spt

./: .gitmodules  bug.cabal  shell.nix  stack.yaml
app/: Local.hs  Main.hs
