name:                bug
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable bug
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Local
  build-depends:       base, binary, distributed-closure
  default-language:    Haskell2010
